完善播放控制器